BUGFIX: Fix overflow-x property on embeded element

--- a/Resources/Private/Assets/Main.scss
+++ b/Resources/Private/Assets/Main.scss
@@ -238,7 +238,7 @@ $betterembed-dialog-color: #fff !default;
 
   > * {
     width: 100% !important;
-    overflow-x: none;
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
   }
